--- a/src/styles/counter3.css
+++ b/src/styles/counter3.css
@@ -1,17 +1,17 @@
 #contain {
     display: flex;
-    padding: 80px;
     background: red;
     width: 100%;
+    height: 130px;
     justify-content: center;
     color: white;
-    margin-top: 0;
+    margin-top: 5px;
 }
 
 #digito {
     border: #ccc 3px solid;
     border-radius: 5px;
-    font-size: 50px;
+    font-size: 40px;
     padding: 20px;
     margin: 0 10px 0 10px;
 }
