--- a/src/styles/counter3.css
+++ b/src/styles/counter3.css
@@ -15,3 +15,21 @@
     padding: 20px;
     margin: 0 10px 0 10px;
 }
+
+#containdown {
+    display: flex;
+    background: black;
+    width: 100%;
+    height: 130px;
+    justify-content: center;
+    color: purple;
+    margin-top: 5px;
+}
+
+#digitodown {
+    border: purple 3px dashed;
+    border-radius: 5px;
+    font-size: 45px;
+    padding: 20px;
+    margin: 0 10px 0 10px;
+}
